# etl_receitas_pb

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
etl_receita/: docker-compose.yaml  local.tf  main.tf  variables.tf
etl_receita/resource/: datasets.json
