[tool.poetry]
name = "etl-receita"
version = "0.1.0"
description = ""
authors = ["Pablo Miranda <pgdemiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
dbt-core = "^1.9.2"
dbt-bigquery = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
